--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <app-header></app-header>
-<h1>{{title}}</h1>
+
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
 </nav>
+
 <router-outlet></router-outlet>
+
+<app-tour-lite></app-tour-lite>
+
 <app-messages></app-messages>
 <app-footer></app-footer>
