add some components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,12 @@
 <app-header></app-header>
 
 <nav>
-  <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/tours">Tours</a>
+  <a routerLink="/about">About us</a>
+  <a routerLink="/edit">Editor</a>
 </nav>
 
 <router-outlet></router-outlet>
 
-<app-tour-lite></app-tour-lite>
-
-<app-messages></app-messages>
+<!--<app-messages></app-messages>-->
 <app-footer></app-footer>
