--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,4 @@
 /* AppComponent's private CSS styles */
-h1 {
-  font-size: 1.2em;
-  color: #999;
-  margin-bottom: 0;
-}
 h2 {
   font-size: 2em;
   margin-top: 0;
@@ -13,6 +8,7 @@ nav a {
   padding: 5px 10px;
   text-decoration: none;
   margin-top: 10px;
+  margin-left: 10px;
   display: inline-block;
   background-color: #eee;
   border-radius: 4px;
@@ -26,4 +22,7 @@ nav a:hover {
 }
 nav a.active {
   color: #039be5;
+}
+{
+  position: relative;
 }
