--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,15 +1,23 @@
 .footer {
-  position: relative;
+  position: absolute;
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
   height: 1.6em;
   border-radius: 4px;
+  bottom: 0;
+  width: 97.5%;
 }
 
 .home {
-  position: absolute;
-  top: 50%;
+  color: #999;
+
+  position: relative;
+  /*top: 20%;*/
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+}
+
+.home:hover {
+  color: #039be5;
 }
