--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,19 +1,18 @@
 .footer {
-  position: absolute;
+  position: relative;
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
   height: 1.6em;
   border-radius: 4px;
   bottom: 0;
-  width: 97.5%;
+
 }
 
 .home {
   color: #999;
-
   position: relative;
-  /*top: 20%;*/
+
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
 }
