--- a/src/app/tour-editor/tour-editor.component.html
+++ b/src/app/tour-editor/tour-editor.component.html
@@ -1,10 +1,11 @@
 <div>
   <nav>
     <a *ngFor="let tour of tours">
-      <app-tour-full [tour]="tour"></app-tour-full>
+      <app-tour-lite [tour]="tour"></app-tour-lite>
       <button routerLink="/edit/{{tour.id}}">Edit</button>
-      <button type="reset" (click)="deleteTour(tour.id)">Delete</button>
+      <button routerLink="/vacant/{{tour.id}}">Look at dates</button>
+      <button (click)="deleteTour(tour.id)">Delete</button>
     </a>
   </nav>
-  <!--<button routeLink="/create-tour"></button>-->
+  <!--<button (click)="createTour()"></button>-->
 </div>
