--- a/src/app/edit-vacant-tour/edit-vacant-tour.component.html
+++ b/src/app/edit-vacant-tour/edit-vacant-tour.component.html
@@ -1,3 +1,19 @@
-<p>
-  edit-vacant-tour works!
-</p>
+<div>
+    <div *ngFor="let vacTour of vacantTours">
+      <form *ngIf="vacTour && vacTour.id == targetId; else elseBlock" (ngSubmit)="saveVacantTour(vacTour)">
+        <label>StartDate: <input type="datetime-local" value="{{vacTour.startDate}}"> </label> <br>
+        <label>Vacant places: <input type="number" value="{{vacTour.vacantPlaces}}"> </label> <br>
+        <button type="submit">Save</button>
+        <button (click)="cancel()">Cancel</button>
+        <button type="reset">Clear</button>
+      </form>
+      <ng-template #elseBlock>
+        <label>StartDate: {{vacTour.startDate}}</label><br>
+        <label>Vacant places: {{vacTour.vacantPlaces}}</label><br>
+        <button (click)="edit(vacTour.id)">Edit</button>
+        <button (click)="deleteVacantTour(vacTour.id)">Delete</button>
+      </ng-template>
+    </div> <br>
+  <button (click)="createVacantTour()">Create</button>
+  <button (click)="goBack()">Back</button>
+</div>
