--- a/src/app/tour-lite/tour-lite.component.html
+++ b/src/app/tour-lite/tour-lite.component.html
@@ -1,7 +1,5 @@
-<div class="content">
+<div>
   <span> title: {{tour.title}}</span>
-  <div class="image">
-    <img src="{{tour.imageSrc}}" alt="Can't find a picture">
-  </div>
+  <img src="{{tour.imageSrc}}" alt="Can't find a picture">
   <span> description: {{tour.shortDescription}}</span>
 </div>
