--- a/src/app/edit-vacant-tour/edit-vacant-tour.component.html
+++ b/src/app/edit-vacant-tour/edit-vacant-tour.component.html
@@ -1,18 +1,22 @@
 <div>
-    <div *ngFor="let vacTour of vacantTours">
-      <form *ngIf="vacTour && vacTour.id == targetId; else elseBlock" (ngSubmit)="saveVacantTour(vacTour)">
-        <label>StartDate: <input type="datetime-local" value="{{vacTour.startDate}}"> </label> <br>
-        <label>Vacant places: <input type="number" value="{{vacTour.vacantPlaces}}"> </label> <br>
-        <button type="submit">Save</button>
-        <button (click)="cancel()">Cancel</button>
-        <button type="reset">Clear</button>
-      </form>
-      <ng-template #elseBlock>
-        <label>StartDate: {{vacTour.startDate}}</label><br>
-        <label>Vacant places: {{vacTour.vacantPlaces}}</label><br>
-        <button (click)="edit(vacTour.id)">Edit</button>
-        <button (click)="deleteVacantTour(vacTour.id)">Delete</button>
-      </ng-template>
+    <div *ngFor="let vacantTour of vacantTours">
+      <div [ngClass]="{'booked': !vacantTour.vacant}">
+        <form *ngIf="vacantTour && vacantTour === target; else elseBlock" (ngSubmit)="saveVacantTour()" #vacantTourForm="ngForm">
+          <label>StartDate: <input type="datetime-local" [(ngModel)]="target.startDate" name="startDate" required> </label> <br>
+          <label>Vacant places: <input type="number" [(ngModel)]="target.vacantPlaces" name="vacantPlaces" required> </label> <br>
+          <button type="submit" [disabled]="vacantTourForm.form.invalid">Save</button>
+          <button type="reset">Clear</button>
+          <button type="button" (click)="cancel(vacantTour)">Cancel</button>
+        </form>
+        <ng-template #elseBlock>
+          <label>StartDate: {{vacantTour.startDate}}</label><br>
+          <label>Vacant places: {{vacantTour.vacantPlaces}}</label><br>
+          <label>Vacant: {{vacantTour.vacant}}</label><br>
+          <button (click)="edit(vacantTour)">Edit</button>
+          <button (click)="changeStatus(vacantTour)">Change status</button>
+          <button (click)="deleteVacantTour(vacantTour)">Delete</button>
+        </ng-template>
+      </div>
     </div> <br>
   <button (click)="createVacantTour()">Create</button>
   <button (click)="goBack()">Back</button>
