--- a/src/app/tour-editor/tour-editor.component.css
+++ b/src/app/tour-editor/tour-editor.component.css
@@ -1,4 +1,11 @@
-nav a {
-  padding: 5px 10px;
+.content {
+  position: relative;
+  width: 300px;
+  min-height: 150px;
+  height: auto;
+  border-radius: 10px;
+  background: #EEE;
   display: inline-block;
+  padding: 5px;
+  margin: 5px;
 }
