--- a/src/app/tour-editor/tour-editor.component.html
+++ b/src/app/tour-editor/tour-editor.component.html
@@ -1,11 +1,34 @@
 <div>
-  <nav>
-    <a *ngFor="let tour of tours">
+  <nav class="content" *ngFor="let tour of tours">
       <app-tour-lite [tour]="tour"></app-tour-lite>
       <button routerLink="/edit/{{tour.id}}">Edit</button>
       <button routerLink="/edit/vacant/{{tour.id}}">Edit dates</button>
       <button (click)="deleteTour(tour.id)">Delete</button>
-    </a>
-  </nav>
-  <!--<button (click)="createTour()"></button>-->
+  </nav> <br>
+  <button (click)="createTour()">Add tour</button>
 </div>
+
+
+<!--<div>-->
+  <!--<div *ngFor="let vacantTour of vacantTours">-->
+    <!--<div [ngClass]="{'booked': !vacantTour.vacant}">-->
+      <!--<form *ngIf="vacantTour && vacantTour === target; else elseBlock" (ngSubmit)="saveVacantTour()" #vacantTourForm="ngForm">-->
+        <!--<label>StartDate: <input type="datetime-local" [(ngModel)]="target.startDate" name="startDate" required> </label> <br>-->
+        <!--<label>Vacant places: <input type="number" [(ngModel)]="target.vacantPlaces" name="vacantPlaces" required> </label> <br>-->
+        <!--<button type="submit" [disabled]="vacantTourForm.form.invalid">Save</button>-->
+        <!--<button type="reset">Clear</button>-->
+        <!--<button type="button" (click)="cancel(vacantTour)">Cancel</button>-->
+      <!--</form>-->
+      <!--<ng-template #elseBlock>-->
+        <!--<label>StartDate: {{vacantTour.startDate}}</label><br>-->
+        <!--<label>Vacant places: {{vacantTour.vacantPlaces}}</label><br>-->
+        <!--<label>Vacant: {{vacantTour.vacant}}</label><br>-->
+        <!--<button (click)="edit(vacantTour)">Edit</button>-->
+        <!--<button (click)="changeStatus(vacantTour)">Change status</button>-->
+        <!--<button (click)="deleteVacantTour(vacantTour)">Delete</button>-->
+      <!--</ng-template>-->
+    <!--</div>-->
+  <!--</div> <br>-->
+  <!--<button (click)="createVacantTour()">Create</button>-->
+  <!--<button (click)="goBack()">Back</button>-->
+<!--</div>-->
