--- a/src/app/tours/tours.component.css
+++ b/src/app/tours/tours.component.css
@@ -1,4 +1,16 @@
-nav a {
-  padding: 5px 10px;
+.content {
+  position: relative;
+  width: 300px;
+  min-height: 150px;
+  height: auto;
+  border-radius: 10px;
+  background: #EEE;
   display: inline-block;
+  padding: 5px;
+  margin: 5px;
+}
+
+.content:hover {
+  cursor: pointer;
+  background: #039be5;
 }
