--- a/src/app/tours/tours.component.css
+++ b/src/app/tours/tours.component.css
@@ -1,3 +1,8 @@
+img {
+  width:98%;
+  margin: 1%;
+}
+
 .content {
   position: relative;
   width: 300px;
@@ -13,4 +18,22 @@
 .content:hover {
   cursor: pointer;
   background: #039be5;
+}
+
+.full-content {
+  width: 600px;
+  min-height: 150px;
+  height: auto;
+  background: #8fcdae;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 5px;
+}
+
+.vacant-tour {
+  background: #A9A9F5;
+  display: inline-block;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 10px;
 }
