--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <nav>
   <a routerLink="/tours">Tours</a>
   <a routerLink="/about">About us</a>
-  <a routerLink="/edit">Editor</a>
+  <a routerLink="/admin">Admin</a>
 </nav>
 
 <router-outlet></router-outlet>
