--- a/src/app/tours/tours.component.css
+++ b/src/app/tours/tours.component.css
@@ -3,6 +3,10 @@ img {
   margin: 1%;
 }
 
+.blocks {
+  display: inline-block;
+}
+
 .content {
   position: relative;
   width: 300px;
@@ -10,7 +14,6 @@ img {
   height: auto;
   border-radius: 10px;
   background: #EEE;
-  display: inline-block;
   padding: 5px;
   margin: 5px;
 }
@@ -18,22 +21,4 @@ img {
 .content:hover {
   cursor: pointer;
   background: #039be5;
-}
-
-.full-content {
-  width: 600px;
-  min-height: 150px;
-  height: auto;
-  background: #8fcdae;
-  border-radius: 10px;
-  padding: 5px;
-  margin: 5px;
-}
-
-.vacant-tour {
-  background: #A9A9F5;
-  display: inline-block;
-  padding: 5px;
-  margin: 5px;
-  border-radius: 10px;
 }
