--- a/src/app/admin-vacant-date/admin-vacant-date.component.html
+++ b/src/app/admin-vacant-date/admin-vacant-date.component.html
@@ -9,6 +9,7 @@
           <button type="button" (click)="cancel()">Cancel</button>
         </form>
         <ng-template #elseBlock>
+          <label>Id: {{vacantDate.id}}</label><br>
           <label>StartDate: {{vacantDate.startDate | date : 'd MMMM yyyy h:mm'}}</label><br>
           <label>Vacant places: {{vacantDate.vacantPlaces}}</label><br>
           <label>Vacant: {{vacantDate.vacant}}</label><br>
