--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div class="footer">
+<footer class="footer">
   <a routerLink="">
     <span class="home">{{home}}</span>
   </a>
-</div>
+</footer>
