--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div>
   <form (ngSubmit)="login()" #loginForm="ngForm">
-      <input type="email" placeholder="Email" name="email" [(ngModel)]="email" required/>
-      <input type="password" placeholder="Password" name="password" [(ngModel)]="password" required/>
+      <input type="text" placeholder="Email" name="username" [(ngModel)]="user.username" required/>
+      <input type="password" placeholder="Password" name="password" [(ngModel)]="user.password" required/>
     <button type="submit" [disabled]="loginForm.form.invalid">Login</button>
   </form>
 </div>
