--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,15 @@
 <nav>
   <a routerLink="/tours">Tours</a>
   <a routerLink="/about">About us</a>
-  <a *ngIf="auth.isLoggednIn()" routerLink="/editor">Editor</a>
-  <a *ngIf="auth.isLoggednIn()" routerLink="/orders">Orders</a>
-  <a *ngIf="!auth.isLoggednIn()"routerLink="/login">Log in</a>
-  <a *ngIf="auth.isLoggednIn()" (click)="logOut()">Log out</a>
+
+  <nav *ngIf="auth.isLoggedIn(); else errorBlock">
+    <a routerLink="/editor">Editor</a>
+    <a routerLink="/orders">Orders</a>
+    <a (click)="logOut()">Log out</a>
+  </nav>
+  <ng-template #errorBlock>
+      <a routerLink="/login">Log in</a>
+  </ng-template>
 </nav>
 
 <router-outlet></router-outlet>
