--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,21 @@
 <app-header></app-header>
 
-<nav>
-  <a routerLink="/tours">Tours</a>
-  <a routerLink="/about">About us</a>
-
-  <nav *ngIf="auth.isLoggedIn(); else errorBlock">
+<div *ngIf="auth.isLoggedIn(); else errorBlock">
+  <nav>
+    <a routerLink="/tours">Tours</a>
+    <a routerLink="/about">About us</a>
     <a routerLink="/editor">Editor</a>
     <a routerLink="/orders">Orders</a>
     <a (click)="logOut()">Log out</a>
   </nav>
-  <ng-template #errorBlock>
-      <a routerLink="/login">Log in</a>
-  </ng-template>
-</nav>
+</div>
+<ng-template #errorBlock>
+  <nav>
+    <a routerLink="/tours">Tours</a>
+    <a routerLink="/about">About us</a>
+    <a routerLink="/login">Log in</a>
+  </nav>
+</ng-template>
 
 <router-outlet></router-outlet>
 
