Minor changes of date format

--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -21,7 +21,7 @@
       <td>{{order.email}}</td>
       <td>{{order.phoneNumber}}</td>
       <td>{{order.participants}}</td>
-      <td>{{order.bookingDate | date : 'd MMMM yyyy h:mm'}}</td>
+      <td>{{order.bookingDate | date : 'd MMMM yyyy H:mm'}}</td>
       <td>{{order.comment}}</td>
       <td>{{order.confirmation}}</td>
       <td><a routerLink="/tours/{{order.tourId}}">Date id: {{order.tourId}}</a></td>
