--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -5,7 +5,7 @@
       <label>Price: {{tour.price}} </label> <br>
       <label>Venue: {{tour.venue}} </label> <br>
       <label>Duration: {{tour.duration}} </label> <br>
-      <label>Start date: {{vacantDate.startDate | date : 'd MMMM yyyy h:mm'}} </label> <br>
+      <label>Start date: {{vacantDate.startDate | date : 'd MMMM yyyy H:mm'}} </label> <br>
     </div>
     <p>
       Please, check the details above and provide some information for booking the tour "{{tour.title}}".
