add error handler

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <a routerLink="/about">About us</a>
     <a routerLink="/editor">Editor</a>
     <a routerLink="/orders">Orders</a>
-    <a (click)="logOut()">Log out</a>
+    <a (click)="logout()">Log out</a>
   </nav>
 </div>
 <ng-template #errorBlock>
