--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -24,8 +24,9 @@
       <td>{{order.bookingDate | date : 'd MMMM yyyy H:mm'}}</td>
       <td>{{order.comment}}</td>
       <td>{{order.confirmation}}</td>
-      <td><a routerLink="/tours/{{order.tourId}}">Date id: {{order.tourId}}</a></td>
-      <td><a routerLink="/admin/editor/vacant/{{order.tourId}}">Tour {{order.vacantDateId}}</a></td>
+      <!--<td><a routerLink="/tours/{{order.vacantDateId}}">Date id: {{order.vacantDateId}}</a></td>-->
+      <td>{{order.vacantDateId}}</td>
+      <td><a routerLink="/editor/vacant/{{order.tourId}}">Tour {{order.tourId}}</a></td>
       <button type="button" (click)="confirmOrder(order)">Confirm</button>
       <button type="button" (click)="cancelOrderConfirmation(order)">Cancel confirmation</button>
       <button type="button" (click)="deleteOrder(order)">Delete</button>
