--- a/src/app/tour-info/tour-info.component.html
+++ b/src/app/tour-info/tour-info.component.html
@@ -1,12 +1,18 @@
-<nav *ngIf="error === undefined || error === null; else errorBlock" class="full-content">
+<nav *ngIf="tour !== undefined; else errorBlock" class="full-content">
   <label> title: {{tour.title}} </label> <br>
   <label> description: {{tour.description}} </label> <br>
   <label> duration: {{tour.duration}} </label> <br>
   <label> participants: {{tour.participants}} </label> <br>
   <label> venue: {{tour.venue}} </label> <br>
   <label> price: {{tour.price}} </label> <br>
-  <nav *ngFor="let pic of tour.pictures">
-    <img src="{{pic}}"/>
+  <nav style="width: 100%" *ngIf="tour.pictures.length > 0">
+       <slideshow
+         [height]="'auto'"
+         [minHeight]="'600px'"
+         [autoPlay]="true"
+         [showArrows]="true"
+         [imageUrls]="tour.pictures">
+       </slideshow>
   </nav>
   <div *ngIf="vacantDates.length > 0; else elseBlock">
     <p>Vacant dates:</p>
@@ -20,8 +26,23 @@
     <p>We don't have any vacant dates, if you are interesting in the tour, please contact us.</p>
   </ng-template>
   <button (click)="goBack()"><span>Back</span></button>
+
+<div *ngIf="bookedDates !== undefined && bookedDates.length > 0">
+  <p>Vacant dates:</p>
+  <div class="vacant-date" *ngFor="let bookedDate of bookedDates">
+    <span>StartDate: {{bookedDate.date | date: 'd MMMM yyyy'}}</span><br>
+    <span>StartDate: {{bookedDate.orderId}}</span><br>
+    <span>StartDate: {{bookedDate.vacant}}</span><br>
+    <span>StartDate: {{tour.minStartTime}}</span><br>
+    <span>StartDate: {{tour.maxStartTime}}</span><br>
+  </div>
+</div>
+  <button (click)="getDates()"><span>DATES</span></button>
 </nav>
+<!--<p-calendar [(ngModel)]="bookedDates"></p-calendar>-->
+<p-galleria [images]="images" panelWidth="500" panelHeight="313" [showCaption]="true" [autoPlay]="true"></p-galleria>
+
 <ng-template #errorBlock>
-  <p>{{error}}</p>
+  <p>Загрузка...</p>
 </ng-template>
 
