add primeNg modules

--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -1,5 +1,5 @@
 
-<nav *ngIf="error === undefined || error === null; else errorBlock">
+<!--<nav *ngIf="error === undefined || error === null; else errorBlock">-->
   <p>{{title}}</p>
   <table>
     <thead>
@@ -34,7 +34,7 @@
     </tbody>
   </table>
   <button type="button" (click)="goBack()">Back</button>
-</nav>
-<ng-template #errorBlock>
-  <p>{{error}}</p>
-</ng-template>
+<!--</nav>-->
+<!--<ng-template #errorBlock>-->
+  <!--<p>{{error}}</p>-->
+<!--</ng-template>-->
